[gd_scene load_steps=3 format=3 uid="uid://dccko375t3oar"]

[ext_resource type="Script" path="res://game_objects/cars/scripts/carcontroller.gd" id="1_8x4mo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bcq3s"]
size = Vector3(2, 1, 3)

[node name="Caterham" type="VehicleBody3D" groups=["player"]]
script = ExtResource("1_8x4mo")

[node name="left_front" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, 0.853853, 0.318476, 1.27463)
use_as_steering = true
wheel_radius = 0.3
wheel_friction_slip = 8.5

[node name="left_rear" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, 0.933848, 0.318477, -1.25496)
use_as_traction = true
wheel_radius = 0.3
wheel_friction_slip = 6.5

[node name="right_front" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, -0.856466, 0.318476, 1.27463)
use_as_steering = true
wheel_radius = 0.3
wheel_friction_slip = 8.5

[node name="right_rear" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.31134e-07, 0, 1.31134e-07, 1, -0.931563, 0.318477, -1.25496)
use_as_traction = true
wheel_radius = 0.3
wheel_friction_slip = 6.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_bcq3s")
